--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "final-form": "^4.20.1",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -17,7 +18,9 @@
     "react-i18next": "^11.7.2",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-stars": "^2.2.5",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
@@ -45,6 +48,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.2",
+    "prettier": "2.1.2",
     "tailwindcss": "^1.8.6"
   }
 }
